<resources>
    <string name="app_name">BougetCrispelFourcaudotLaby</string>
    <string name="LabyChooser_choice">Choisir</string>
    <string name="LabyChooser_msg_not">Aucun labyrinthe choisie</string>
    <string name="Home_playerChoice">Choisir le joueur</string>
    <string name="Home_enemyChoice">Choisir l\'ennemie</string>
    <string name="Home_tilesChoice">Choisir le tileset</string>
    <string name="Home_LabyChoice">Choisir le labyrinthe</string>
    <string name="Home_tileset">Tileset</string>
    <string name="Home_none">Aucun</string>
    <string name="Home_Launch">Lancer</string>
    <string name="Choice_random">Aléatoire</string>
    <string name="back">Back</string>
    <string name="EndGame_Win">Vous avez gagné !!</string>
    <string name="EndGame_Died">Vous avez perdu...</string>
    <string name="EndGame_Not">T\'as tout fait buguer...</string>
    <string name="EndGame_Retry">Recommencer</string>
    <string name="EndGame_Stop">Retourner au menu</string>
    <string name="EndGame_Score">Temps survécu</string>
</resources>